--- a/index.html
+++ b/index.html
@@ -1,12 +1,48 @@
 <!DOCTYPE html>
 <html lang="pr-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Projeto Redes Sociais</title>
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="estilos/style.css">
 </head>
+
 <body>
-    <h1>teste</h1>
+    <div>
+        <div class="iphone"></div>
+        <iframe src="tela-home.html" name="tela" frameborder="0" scrolling="scrolling"></iframe>
+
+
+        <ul class="icones">
+
+            <a href="tela-home.html" target="tela">
+                <li class="icone-home"></li>
+            </a>
+
+            <a href="tela-youtube.html" target="tela">
+                <li class="icone-youtube"></li>
+            </a>
+
+            <a href="tela-github.html" target="tela">
+                <li class="icone-git"></li>
+            </a>
+
+            <a href="#">
+                <li class="icone-instagram"></li>
+            </a>
+
+            <a href="#">
+                <li class="icone-twitter"></li>
+            </a>
+
+            <a href="#">
+                <li class="icone-facebook"></li>
+            </a>
+        </ul>
+    </div>
+
 </body>
+
 </html>
