--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
 </head>
 
 <body>
-    <div>
-        <div class="iphone"></div>
-        <iframe src="tela-home.html" name="tela" frameborder="0" scrolling="scrolling"></iframe>
-
+    <main>
+        <section class="iphone">
+        <iframe src="tela-home.html" name="tela" id="tela" frameborder="0"></iframe>
+        </section>
 
         <ul class="icones">
 
@@ -41,7 +41,7 @@
                 <li class="icone-facebook"></li>
             </a>
         </ul>
-    </div>
+    </main>
 
 </body>
 
