--- a/tela-home.html
+++ b/tela-home.html
@@ -5,14 +5,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home</title>
     <style>
+        *{
+            margin: 0px;
+            padding: 0px;
+        }
         body{
-            background-image: url('imagens/tela-home.jpg');
+            width: 100vw;
+            height: 100vh;
+            background: black url('imagens/tela-home.jpg') no-repeat top center;
             background-size: cover;
-            background-repeat: no-repeat;
         }
     </style>
 </head>
 <body>
-    <div></div>
 </body>
 </html>
