--- a/index.html
+++ b/index.html
@@ -12,35 +12,31 @@
 <body>
     <main>
         <section class="iphone">
-        <iframe src="tela-home.html" name="tela" id="tela" frameborder="0"></iframe>
+        <iframe src="tela-home.html" name="tela" id="tela" frameborder="0"> Seu navegador não é compatível</iframe>
         </section>
 
-        <ul class="icones">
-
-            <a href="tela-home.html" target="tela">
-                <li class="icone-home"></li>
-            </a>
-
-            <a href="tela-youtube.html" target="tela">
-                <li class="icone-youtube"></li>
-            </a>
-
-            <a href="tela-github.html" target="tela">
-                <li class="icone-git"></li>
-            </a>
-
-            <a href="#">
-                <li class="icone-instagram"></li>
-            </a>
-
-            <a href="#">
-                <li class="icone-twitter"></li>
-            </a>
-
-            <a href="#">
-                <li class="icone-facebook"></li>
-            </a>
-        </ul>
+        <section>
+            <ul class="icones">
+                <a href="tela-home.html" target="tela">
+                    <li class="icone-home"></li>
+                </a>
+                <a href="tela-youtube.html" target="tela">
+                    <li class="icone-youtube"></li>
+                </a>
+                <a href="tela-github.html" target="tela">
+                    <li class="icone-git"></li>
+                </a>
+                <a href="tela-instagram.html" target="tela">
+                    <li class="icone-instagram"></li>
+                </a>
+                <a href="tela-twitter.html" target="tela">
+                    <li class="icone-twitter"></li>
+                </a>
+                <a href="tela-facebook.html" target="tela">
+                    <li class="icone-facebook"></li>
+                </a>
+            </ul>
+        </section>
     </main>
 
 </body>
