--- a/tela-youtube.html
+++ b/tela-youtube.html
@@ -5,52 +5,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tela youtube</title>
-    <style>
-        body {
-            font-family: Arial, Helvetica, sans-serif;
-            padding: 0px;
-            margin: 0px;
-        }
-
-        .img-container {
-            background-image: url('imagens/tela-youtube.png');
-            width: 100%;
-            height: 1254px;
-            background-size: contain;
-            background-repeat: no-repeat;
-        }
-
-        .button{
-            width: 253px;
-            height: 40px;
-            background-color: red;
-            color: white;
-            font-size: 1.2em;
-            text-align: center;
-            margin-top: -25px;
-        }
-
-        .button > p{
-
-            padding-top: 6px;
-        }
-
-        a{
-            text-decoration: none;
-        }
-
-        a:hover{
-            color: lightgray;
-            font-weight: bolder;
-        }
-    </style>
+    <link rel="stylesheet" href="estilos/social.css">
 </head>
 
 <body>
-    <div class="img-container"></div>
+    <img src="imagens/tela-youtube.png" alt="youtube">
     <a href="https://www.youtube.com/c/CursoemV%C3%ADdeo" target="_blank">
-        <div class="button"><p>ACESSE</p></div>
+        <div class="button">
+            <p>ACESSE</p>
+        </div>
     </a>
 </body>
-
 </html>
