--- a/tela-instagram.html
+++ b/tela-instagram.html
@@ -1,20 +1,17 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tela Github</title>
+    <title>Instagram</title>
     <link rel="stylesheet" href="estilos/social.css">
 </head>
-
 <body>
-    <img src="imagens/tela-github.jpg" alt="Github">
-    <a href="https://github.com/" target="_blank">
-        <div class="button">
-            <p>ACESSE</p>
-        </div>
-    </a>
+    <img src="imagens/tela-instagram.jpg" alt="Instagram">
+    <a href="https://www.instagram.com.br" target="_blank">
+    <div class="button">
+        <p>ACESSE</p>
+    </div>
+</a>
 </body>
-
 </html>
